--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c0cdad">  <td>18/11/21 01:28:38</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC07()[pri:0, instance:Railway.LoginTest@7ee8290b]">TC07</td> 
-  <td>main@1600667055</td>   <td></td> </tr>
-<tr bgcolor="c0cdad">  <td>18/11/21 01:28:39</td>   <td>1026</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.afterMethod()[pri:0, instance:Railway.LoginTest@7ee8290b]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1600667055</td>   <td></td> </tr>
-<tr bgcolor="c0cdad">  <td>18/11/21 01:28:31</td>   <td>-6984</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.beforeMethod()[pri:0, instance:Railway.LoginTest@7ee8290b]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1600667055</td>   <td></td> </tr>
+<tr bgcolor="b89ecf">  <td>18/11/21 10:21:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC06()[pri:0, instance:Railway.LoginTest@6aaceffd]">TC06</td> 
+  <td>main@1151844284</td>   <td></td> </tr>
+<tr bgcolor="b89ecf">  <td>18/11/21 10:22:04</td>   <td>13827</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.afterMethod()[pri:0, instance:Railway.LoginTest@6aaceffd]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1151844284</td>   <td></td> </tr>
+<tr bgcolor="b89ecf">  <td>18/11/21 10:21:43</td>   <td>-6926</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.beforeMethod()[pri:0, instance:Railway.LoginTest@6aaceffd]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1151844284</td>   <td></td> </tr>
 </table>
