--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b89ecf">  <td>18/11/21 10:21:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.beforeMethod()[pri:0, instance:Railway.LoginTest@6aaceffd]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1151844284</td>   <td></td> </tr>
-<tr bgcolor="b89ecf">  <td>18/11/21 10:21:50</td>   <td>6926</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC06()[pri:0, instance:Railway.LoginTest@6aaceffd]">TC06</td> 
-  <td>main@1151844284</td>   <td></td> </tr>
-<tr bgcolor="b89ecf">  <td>18/11/21 10:22:04</td>   <td>20753</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.afterMethod()[pri:0, instance:Railway.LoginTest@6aaceffd]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1151844284</td>   <td></td> </tr>
+<tr bgcolor="bd949d">  <td>18/11/21 15:52:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.beforeClass()[pri:0, instance:Railway.LoginTest@1e178745]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1819776360</td>   <td></td> </tr>
+<tr bgcolor="bd949d">  <td>18/11/21 15:52:20</td>   <td>7041</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC01()[pri:0, instance:Railway.LoginTest@1e178745]">TC01</td> 
+  <td>main@1819776360</td>   <td></td> </tr>
+<tr bgcolor="bd949d">  <td>18/11/21 15:52:24</td>   <td>11221</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC02()[pri:0, instance:Railway.LoginTest@1e178745]">TC02</td> 
+  <td>main@1819776360</td>   <td></td> </tr>
+<tr bgcolor="bd949d">  <td>18/11/21 15:52:25</td>   <td>12624</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC03()[pri:0, instance:Railway.LoginTest@1e178745]">TC03</td> 
+  <td>main@1819776360</td>   <td></td> </tr>
+<tr bgcolor="bd949d">  <td>18/11/21 15:52:27</td>   <td>14154</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC04()[pri:0, instance:Railway.LoginTest@1e178745]">TC04</td> 
+  <td>main@1819776360</td>   <td></td> </tr>
+<tr bgcolor="bd949d">  <td>18/11/21 15:52:28</td>   <td>15281</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC05()[pri:0, instance:Railway.LoginTest@1e178745]">TC05</td> 
+  <td>main@1819776360</td>   <td></td> </tr>
+<tr bgcolor="bd949d">  <td>18/11/21 15:52:33</td>   <td>20578</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC06()[pri:0, instance:Railway.LoginTest@1e178745]">TC06</td> 
+  <td>main@1819776360</td>   <td></td> </tr>
+<tr bgcolor="bd949d">  <td>18/11/21 15:52:37</td>   <td>24469</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC07()[pri:0, instance:Railway.LoginTest@1e178745]">TC07</td> 
+  <td>main@1819776360</td>   <td></td> </tr>
+<tr bgcolor="bd949d">  <td>18/11/21 15:52:37</td>   <td>24488</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.afterClass()[pri:0, instance:Railway.LoginTest@1e178745]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1819776360</td>   <td></td> </tr>
 </table>
