--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,22 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bd949d">  <td>18/11/21 17:15:12</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.beforeClass()[pri:0, instance:Railway.LoginTest@1f59a598]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1864869682</td>   <td></td> </tr>
-<tr bgcolor="bd949d">  <td>18/11/21 17:15:19</td>   <td>7007</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC01()[pri:0, instance:Railway.LoginTest@1f59a598]">TC01</td> 
-  <td>main@1864869682</td>   <td></td> </tr>
-<tr bgcolor="bd949d">  <td>18/11/21 17:15:23</td>   <td>11093</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC02()[pri:0, instance:Railway.LoginTest@1f59a598]">TC02</td> 
-  <td>main@1864869682</td>   <td></td> </tr>
-<tr bgcolor="bd949d">  <td>18/11/21 17:15:24</td>   <td>12472</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC03()[pri:0, instance:Railway.LoginTest@1f59a598]">TC03</td> 
-  <td>main@1864869682</td>   <td></td> </tr>
-<tr bgcolor="bd949d">  <td>18/11/21 17:15:26</td>   <td>14036</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC04()[pri:0, instance:Railway.LoginTest@1f59a598]">TC04</td> 
-  <td>main@1864869682</td>   <td></td> </tr>
-<tr bgcolor="bd949d">  <td>18/11/21 17:15:27</td>   <td>15154</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC05()[pri:0, instance:Railway.LoginTest@1f59a598]">TC05</td> 
-  <td>main@1864869682</td>   <td></td> </tr>
-<tr bgcolor="bd949d">  <td>18/11/21 17:15:31</td>   <td>19407</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC06()[pri:0, instance:Railway.LoginTest@1f59a598]">TC06</td> 
-  <td>main@1864869682</td>   <td></td> </tr>
-<tr bgcolor="bd949d">  <td>18/11/21 17:15:35</td>   <td>23183</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC07()[pri:0, instance:Railway.LoginTest@1f59a598]">TC07</td> 
-  <td>main@1864869682</td>   <td></td> </tr>
-<tr bgcolor="bd949d">  <td>18/11/21 17:15:35</td>   <td>23201</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.afterClass()[pri:0, instance:Railway.LoginTest@1f59a598]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1864869682</td>   <td></td> </tr>
+<tr bgcolor="9e9185">  <td>18/11/21 22:37:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.beforeClass()[pri:0, instance:Railway.LoginTest@8c3b9d]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2030036700</td>   <td></td> </tr>
+<tr bgcolor="9e9185">  <td>18/11/21 22:37:15</td>   <td>6852</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC01()[pri:0, instance:Railway.LoginTest@8c3b9d]">TC01</td> 
+  <td>main@2030036700</td>   <td></td> </tr>
+<tr bgcolor="9e9185">  <td>18/11/21 22:37:19</td>   <td>10766</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC02()[pri:0, instance:Railway.LoginTest@8c3b9d]">TC02</td> 
+  <td>main@2030036700</td>   <td></td> </tr>
+<tr bgcolor="9e9185">  <td>18/11/21 22:37:20</td>   <td>12058</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC03()[pri:0, instance:Railway.LoginTest@8c3b9d]">TC03</td> 
+  <td>main@2030036700</td>   <td></td> </tr>
+<tr bgcolor="9e9185">  <td>18/11/21 22:37:21</td>   <td>13453</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC04()[pri:0, instance:Railway.LoginTest@8c3b9d]">TC04</td> 
+  <td>main@2030036700</td>   <td></td> </tr>
+<tr bgcolor="9e9185">  <td>18/11/21 22:37:22</td>   <td>14545</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC05()[pri:0, instance:Railway.LoginTest@8c3b9d]">TC05</td> 
+  <td>main@2030036700</td>   <td></td> </tr>
+<tr bgcolor="9e9185">  <td>18/11/21 22:37:26</td>   <td>18366</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC06()[pri:0, instance:Railway.LoginTest@8c3b9d]">TC06</td> 
+  <td>main@2030036700</td>   <td></td> </tr>
+<tr bgcolor="9e9185">  <td>18/11/21 22:37:31</td>   <td>23625</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC07()[pri:0, instance:Railway.LoginTest@8c3b9d]">TC07</td> 
+  <td>main@2030036700</td>   <td></td> </tr>
+<tr bgcolor="9e9185">  <td>18/11/21 22:37:37</td>   <td>29350</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.afterClass()[pri:0, instance:Railway.LoginTest@8c3b9d]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2030036700</td>   <td></td> </tr>
 </table>
